# report-template

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: grant_payload_advanced_demo.json  grant_payload_demo.json
data/examples/: README.md  ai_edu_skeleton.json  grant_advanced_demo.json  grant_demo.json  project_proposal_payload.json  test_all_blocks.json  verify_issue4.yaml
docs/: coding_agent_full_prompt.md  grant_render_advanced_readme.md  grant_render_readme.md  grant_template_upgrade_guide.md  phase1_status.md  report_engine_payload_spec.md  report_engine_template_spec.md  template_check_troubleshooting.md
output/: .~lock.demo.docx#
output/ai_edu_demo/: ai_edu_report.docx  ai_edu_report.json  ai_edu_report_final.docx
output/verify_demo/: verify_final.docx  verify_payload.json  verify_template.docx
scripts/: __init__.py  build_custom_template.py  build_test_template.py  editor.sh  render_grant_advanced.py  render_grant_demo.py
server/: config.py  database.py  main.py  requirements.txt
server/models/: __init__.py  draft.py  template.py  user.py
templates/: .~lock.test_all_blocks.docx#  grant_template_demo_annotated_v3.docx  grant_template_demo_clean_v3.docx  project_proposal_template.docx  test_all_blocks.docx
tests/: __init__.py  conftest.py  test_blocks.py  test_cli.py  test_compat_render_advanced.py  test_prompt_parser.py  test_renderer.py  test_schema.py  test_style_checker.py  test_subdoc.py  test_template_checker.py  test_validator.py
web/: next.config.ts  package-lock.json  package.json
(+70 files in other folders)
